x4_phaseIV/8_flask-vue-kubernetes/ingress-www.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: www
  name: ingress-www-jupyteronline-com
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: letsencrypt-prod-nginx
    #ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  # Replace the placeholder with your domain name (e.g. ingress.dev.blog.shoot.canary.k8s-hana.ondemand.com)
  - hosts:
    - www.jupyteronline.com
    secretName: nginx-www-jupyteronline-com-prod-secret
  rules:
    # Replace the placeholder with your domain name (e.g. ingress.dev.blog.shoot.canary.k8s-hana.ondemand.com)
    - host: www.jupyteronline.com
      http:
        paths:
        - path: /
          backend:
            serviceName: vue
            servicePort: 8080
        - path: /dash
          backend:
            serviceName: dash
            servicePort: 8050
        - path: /books
          backend:
            serviceName: flask
            servicePort: 5000
